<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/k1"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="#320D1929"
        android:fontFamily="casual"
        android:text="@string/k1"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul" />

    <Button
        android:id="@+id/k2"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:background="#320D1929"
        android:fontFamily="casual"
        android:text="@string/k2"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/k1" />

    <Button
        android:id="@+id/k3"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:background="#320D1929"
        android:fontFamily="casual"
        android:text="@string/k3"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/k2" />

    <Button
        android:id="@+id/k4"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:background="#320D1929"
        android:fontFamily="casual"
        android:text="@string/k4"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/k3" />

    <Button
        android:id="@+id/k5"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:background="#320D1929"
        android:fontFamily="casual"
        android:text="@string/k5"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/k4" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="30dp"
        android:background="#00B80C0C"
        android:fontFamily="casual"
        android:text="@string/judul"
        android:textAllCaps="true"
        android:textColor="#E6FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>